force-app/main/default/objects/Order__c/fields/AccountSAPId__c.field-meta.xml
<CustomField>
    <fullName>AccountSAPId__c</fullName>
    <formula>AccountId__r.AccountEId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SAP ID</label>
    <type>Text</type>
</CustomField>