force-app/main/default/objects/Order__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>OrderLineItem__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>OrderLineItem__c.OrderId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>