force-app/main/default/objects/Order__c/fields/BillingAddressTxt__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressTxt__c</fullName>
    <label>Billing Address (txt)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>