force-app/main/default/objects/Order__c/fields/EId__c.field-meta.xml
<CustomField>
    <fullName>EId__c</fullName>
    <description>External ID from Google Calendar event.</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID from Google Calendar event.</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>