force-app/main/default/objects/Order__c/fields/IsForSync__c.field-meta.xml
<CustomField>
    <fullName>IsForSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Sync</label>
    <type>Checkbox</type>
</CustomField>