force-app/main/default/objects/Order__c/fields/OnSiteContactId__c.field-meta.xml
<CustomField>
    <fullName>OnSiteContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On-site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (On-site Contact)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>