force-app/main/default/objects/Order__c/fields/OpportunityNo__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNo__c</fullName>
    <formula>OpportunityId__r.OpportunityNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity No</label>
    <type>Text</type>
</CustomField>