force-app/main/default/objects/Order__c/fields/OwnerSAPId__c.field-meta.xml
<CustomField>
    <fullName>OwnerSAPId__c</fullName>
    <label>Owner SAP ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>