force-app/main/default/objects/Order__c/fields/RealizationEndDate__c.field-meta.xml
<CustomField>
    <fullName>RealizationEndDate__c</fullName>
    <label>Realization End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>