force-app/main/default/objects/Order__c/fields/RealizationStartDate__c.field-meta.xml
<CustomField>
    <fullName>RealizationStartDate__c</fullName>
    <label>Realization Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>