force-app/main/default/objects/Order__c/fields/SAPOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>SAPOrderStatus__c</fullName>
    <label>SAP Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAPOrderStatus</valueSetName>
    </valueSet>
</CustomField>