force-app/main/default/objects/Order__c/fields/ShippingAddressTxt__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressTxt__c</fullName>
    <label>Shipping Address (txt)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>